# notify-cpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  notify-cppConfig.cmake.in  notify-cppConfigVersion.cmake.in
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt  main.cpp
example/file_monitor/: CMakeLists.txt  main.cpp
example/file_monitor_local/: CMakeLists.txt  main.cpp
include/inotify-cpp/: Event.h  FileSystemEvent.h  Inotify.h  Notification.h  NotifierBuilder.h  fanotify.h  inotify.h  notification.h  notifierbuilder.h  notify.h
include/notify-cpp/: event.h  fanotify.h  fanotify_controller.h  fanotify_event.h  file_system_event.h  inotify.h  inotify_controller.h  inotify_event.h  kqueue.h  kqueue_controller.h  kqueue_event.h  notification.h  notifier_builder.h  notify.h  notify_controller.h  util.h
include/notify-cpp/internal/: util.h
source/: CMakeLists.txt  Event.cpp  FileSystemEvent.cpp  Inotify.cpp  Notification.cpp  NotifierBuilder.cpp  event.cpp  fanotify.cpp  fanotify_controller.cpp  fanotify_event.cpp  file_system_event.cpp  inotify.cpp  inotify_controller.cpp  inotify_event.cpp  kqueue.cpp  kqueue_controller.cpp  kqueue_event.cpp  notification.cpp  notifier_builder.cpp  notify.cpp  notify_controller.cpp  util.cpp
test/unit/: CMakeLists.txt  NotifierBuilderTests.cpp  event_handler_test.cpp  fanotify_controller_test.cpp  filesystem_event_helper.hpp  inotify_controller_test.cpp  kqueue_controller_test.cpp  main.cpp
